# F90GIO

./: .clone.md  CMakeLists.txt  Makefile  README  README.CMAKE  README.md  README_CMAKE.md  README_LEGACY_MAKE.md  hdf4_testdata.hdf  hdf5_testdata.h5  module_hdf4.f90  module_hdf5.f90  module_netcdf.f90  test1_netcdf.f90  test2_hdf4.f90  test3_hdf5.f90  test_all.bash  use_hdf4.bsh  use_hdf5.bsh  use_netcdf.bsh
.github/workflows/: build_gfortran.yml  clone.yml
config/: env.gnu.github.sh  env.gnu.hinata.sh  env.gnu.jojo.sh  env.gnu.mac-arm.sh  env.gnu.measures1.sh  env.intel.discover_ESMA.sh  env.intel.pro15.sh  env.sh
include/: mod_f90gio.mod  mod_f90gioh4.mod  mod_f90gioh5.mod  mod_f90gionc.mod
libsrc/: CMakeLists.txt  makefile.config  mod_f90gio.f90  mod_f90gioh5.f90  mod_f90gionc.f90
libsrc/fast/h5/: CMakeLists.txt  cmp_test_h5.sh  h5_rdatt.f90.inc  h5_rdvar.f90.inc  log.h5file  m_h5io.f90  mod_f90gioh5.f90  test.f90  test_h5io.f90
libsrc/fast/nc/: CMakeLists.txt  cmp_test_nc.sh  m_ncio.f90  nc_rdatt.f90.inc  nc_rdatt_cstr1d.c  nc_rdvar.f90.inc  nc_wrtvar.f90.inc  test_ncio.f90
src/: Makefile  README  makefile.config  makefile.config.Qing_intel  makefile.config.pro15_intel  mod_f90gio.f90  mod_f90gioh4.f90  mod_f90gioh5.f90  mod_f90gionc.f90
test/: CMakeLists.txt  Makefile  README  h4.results_correct  h5.results_correct  nc.results_correct  test_h4.f90  test_h4_g.f90  test_h5.f90  test_h5_g.f90  test_nc.f90  test_nc_g.f90  test_nc_write.f90
test-fast/: CMakeLists.txt  profile_has_groups.nc4  test_h5io.f90  test_ncio.f90  test_ncio_group.f90
test-nolib/: Makefile  test_hdf4.bsh  test_hdf5.bsh  test_netcdf.bsh
